@@ -1,6 +1,7 @@
 version 0.8 - xxx
  . All: removed deprecated classes/methods (issue #326)
  . BitmapFontAtlas: new features (issue #317)
+ . CocosLive: Demo shows world rankings (issue #342)
  . CocosNode: actions don't retain the target (issue #150)
  . Demos: Added PerformanceParticleTest (issue #331)
  . LabelAtlas: don't render in subpixel (issue #135)
